--- a/01/index.html
+++ b/01/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Semantiske tags</h1>
+        <h1>Semantiske tags.</h1>
     </header>
     <nav>
         <a href="semantic.html">semantic</a>
